all update + first ref3

--- a/fr/index.html
+++ b/fr/index.html
@@ -107,7 +107,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 L'armée</h2>
-        <p align="center">Nombre total de membres: <b class="ref">118</b></p>
+        <p align="center">Nombre total de membres: <b class="ref">126</b></p>
         <p align="center">Cliquer sur un nom en <b class="ref">or</b> vous enverra aux <code>🌟 Remerciements</code> de l'artiste.</p>
         <table class="members-table" align=center>
           <thead>
@@ -217,6 +217,13 @@
               <td><a href="../files/arabus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>artistus</td>
+              <td>
+                <p><img src="../files/artistus.jpeg"></p>
+              </td>
+              <td><a href="../files/artistus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>asmolgus</td>
               <td>
                 <p><img src=../files/asmolgus.jpeg></p>
@@ -229,6 +236,13 @@
                 <p><img src="../files/asus.jpeg"></p>
               </td>
               <td><a href="../files/asus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>avokadus</td>
+              <td>
+                <p><img src="../files/avokadus.jpeg"></p>
+              </td>
+              <td><a href="../files/avokadus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">babacus</a></td>
@@ -280,11 +294,25 @@
               <td><a href="../files/cactus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>campus</td>
+              <td>
+                <p><img src="../files/campus.jpeg"></p>
+              </td>
+              <td><a href="../files/campus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Samilogosy">capturus</a></td>
               <td>
                 <p><img src=../files/capturus.jpeg></p>
               </td>
               <td><a href="../files/capturus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>catus</td>
+              <td>
+                <p><img src="../files/catus.jpeg"></p>
+              </td>
+              <td><a href="../files/catus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Jujudubat7">chaplinus</a></td>
@@ -462,6 +490,13 @@
               <td><a href="../files/grogus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Aliko">hakimus</a></td>
+              <td>
+                <p><img src="../files/hakimus.jpeg"></p>
+              </td>
+              <td><a href="../files/hakimus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Apyzzelos">hamburgus</a></td>
               <td>
                 <p><img src=../files/hamburgus.jpeg></p>
@@ -525,6 +560,13 @@
               <td><a href="../files/killus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>labus</td>
+              <td>
+                <p><img src="../files/labus.jpeg"></p>
+              </td>
+              <td><a href="../files/labus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Chus">laserus</a></td>
               <td>
                 <p><img src=../files/laserus.jpeg></p>
@@ -560,6 +602,13 @@
               <td><a href="../files/maya.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Aliko">mbappus</a></td>
+              <td>
+                <p><img src="../files/mbappus.jpeg"></p>
+              </td>
+              <td><a href="../files/mbappus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Chus">michael-jacksus</a></td>
               <td>
                 <p><img src=../files/michael-jacksus.jpeg>
@@ -589,7 +638,7 @@
               <td><a href="../files/narutus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Ilian">naturus</a></td>
+              <td><a class="ref" href="#AN-Chus">naturus</a></td>
               <td>
                 <p><img src=../files/naturus.jpeg></p>
               </td>
@@ -615,6 +664,13 @@
                 <p><img src=../files/nymarus.jpeg></p>
               </td>
               <td><a href="../files/nymarus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>oranjus</td>
+              <td>
+                <p><img src="../files/oranjus.jpeg"></p>
+              </td>
+              <td><a href="../files/oranjus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-XNinja">pacmanus</a></td>
@@ -988,14 +1044,14 @@
         <p>Merci aux <b class="ref">20</b> artistes:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
-          <li id="AN-Apix"><b class="ref2">💎 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
+          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Voir @Apix0n sur GitHub">Apix</a></b> (moi) pour tous les personnages avec le nom blanc,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> qui, en plus d’être la personne avec laquelle j’ai eu l’idée, a créé <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> et <code>vampirus</code>,</li>
           <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Voir @XNinjaYmZ sur GitHub">XNinja</a></b> pour <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" style="text-decoration: underline; text-decoration-color: var(--ref);">rickus</code>, <code>stickmus</code>, <code>uranus</code> et <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> pour <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> et <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> pour <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> pour <code>luffus</code> et <code>nymarus</code>,</li>
           <li id="AN-Camicase"><b>Camicase</b> pour <code>helicoptus</code> et <code>sleepus</code>,</li>
-          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> pour <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> et <code>yoyosus</code>,</li>
+          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> pour <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> et <code>yoyosus</code>,</li>
           <li id="AN-Lili"><b>Lili</b> pour <code>amosus</code>, <code>bakacutea</code> et <code>turkus</code>,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> pour <code>pikachus</code> et <code>rainbowus</code>,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="Voir @Apyzzelos sur GitHub">Apyzzelos</a></b> pour <code>hamburgus</code>,</li>
