--- a/tr/index.html
+++ b/tr/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">118</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">126</b></p>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
           <thead>
@@ -218,6 +218,13 @@
               <td><a href="../files/arabus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>artistus</td>
+              <td>
+                <p><img src="../files/artistus.jpeg"></p>
+              </td>
+              <td><a href="../files/artistus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>asmolgus</td>
               <td>
                 <p><img src=../files/asmolgus.jpeg></p>
@@ -230,6 +237,13 @@
                 <p><img src="../files/asus.jpeg"></p>
               </td>
               <td><a href="../files/asus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>avokadus</td>
+              <td>
+                <p><img src="../files/avokadus.jpeg"></p>
+              </td>
+              <td><a href="../files/avokadus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">babacus</a></td>
@@ -281,11 +295,25 @@
               <td><a href="../files/cactus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>campus</td>
+              <td>
+                <p><img src="../files/campus.jpeg"></p>
+              </td>
+              <td><a href="../files/campus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Samilogosy">capturus</a></td>
               <td>
                 <p><img src=../files/capturus.jpeg></p>
               </td>
               <td><a href="../files/capturus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>catus</td>
+              <td>
+                <p><img src="../files/catus.jpeg"></p>
+              </td>
+              <td><a href="../files/catus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Jujudubat7">chaplinus</a></td>
@@ -463,6 +491,13 @@
               <td><a href="../files/grogus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Aliko">hakimus</a></td>
+              <td>
+                <p><img src="../files/hakimus.jpeg"></p>
+              </td>
+              <td><a href="../files/hakimus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Apyzzelos">hamburgus</a></td>
               <td>
                 <p><img src=../files/hamburgus.jpeg></p>
@@ -526,6 +561,13 @@
               <td><a href="../files/killus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>labus</td>
+              <td>
+                <p><img src="../files/labus.jpeg"></p>
+              </td>
+              <td><a href="../files/labus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Chus">laserus</a></td>
               <td>
                 <p><img src=../files/laserus.jpeg></p>
@@ -561,6 +603,13 @@
               <td><a href="../files/maya.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Aliko">mbappus</a></td>
+              <td>
+                <p><img src="../files/mbappus.jpeg"></p>
+              </td>
+              <td><a href="../files/mbappus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Chus">michael-jacksus</a></td>
               <td>
                 <p><img src=../files/michael-jacksus.jpeg>
@@ -590,7 +639,7 @@
               <td><a href="../files/narutus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
-              <td><a class="ref" href="#AN-Ilian">naturus</a></td>
+              <td><a class="ref" href="#AN-Chus">naturus</a></td>
               <td>
                 <p><img src=../files/naturus.jpeg></p>
               </td>
@@ -616,6 +665,13 @@
                 <p><img src=../files/nymarus.jpeg></p>
               </td>
               <td><a href="../files/nymarus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>oranjus</td>
+              <td>
+                <p><img src="../files/oranjus.jpeg"></p>
+              </td>
+              <td><a href="../files/oranjus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-XNinja">pacmanus</a></td>
@@ -989,14 +1045,14 @@
         <p><b class="ref">20</b> sanatçılara teşekkürler:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
-          <li id="AN-Apix"><b class="ref2">💎 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
+          <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
           <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" style="text-decoration: underline; text-decoration-color: var(--ref);">rickus</code>, <code>stickmus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
           <li id="AN-Camicase"><b>Camicase</b> <code>helicoptus</code> ve <code>sleepus</code> için,</li>
-          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
+          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
           <li id="AN-Lili"><b>Lili</b> <code>amosus</code>, <code>bakacutea</code> ve <code>turkus</code> için,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> <code>pikachus</code> ve <code>rainbowus</code> için,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="GitHub'da @Apyzzelos'a göz atın">Apyzzelos</a></b> <code>hamburgus</code> için,</li>
