3 new characters + 💎 for Aliko!

--- a/tr/index.html
+++ b/tr/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">126</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">129</b></p>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align=center>
           <thead>
@@ -554,6 +554,13 @@
               <td><a href="../files/japnessa.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">kebabus</a></td>
+              <td>
+                <p><img src="../files/kebabus.jpeg"></p>
+              </td>
+              <td><a href="../files/kebabus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Ilian">killus</a></td>
               <td>
                 <p><img src=../files/killus.jpeg></p>
@@ -580,6 +587,13 @@
                 <p><img src=../files/livrus.jpeg></p>
               </td>
               <td><a href="../files/livrus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-ceriban176">louivitus</a></td>
+              <td>
+                <p><img src="../files/louivitus.jpeg"></p>
+              </td>
+              <td><a href="../files/louivitus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-EVIL-UO">luffus</a></td>
@@ -791,6 +805,13 @@
                 <p><img src="../files/rickus.jpeg"></p>
               </td>
               <td><a href="../files/rickus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Aliko">robloxus</a></td>
+              <td>
+                <p><img src="../files/robloxus.jpeg"></p>
+              </td>
+              <td><a href="../files/robloxus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Ilian">robotus</a></td>
@@ -1047,19 +1068,19 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" style="text-decoration: underline; text-decoration-color: var(--ref);">rickus</code>, <code>stickmus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stickmus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
           <li id="AN-Camicase"><b>Camicase</b> <code>helicoptus</code> ve <code>sleepus</code> için,</li>
-          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
+          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> ve <code>yoyosus</code>için,</li>
           <li id="AN-Lili"><b>Lili</b> <code>amosus</code>, <code>bakacutea</code> ve <code>turkus</code> için,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> <code>pikachus</code> ve <code>rainbowus</code> için,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="GitHub'da @Apyzzelos'a göz atın">Apyzzelos</a></b> <code>hamburgus</code> için,</li>
           <li id="AN-Samilogosy"><b>Samilogosy</b> <code>capturus</code> ve <code>shrekus</code> için,</li>
           <li id="AN-K-Y"><b>K.Y</b> <code>theamosus78</code> için,</li>
           <li id="AN-ID-CLAS"><b>ID_CLAS</b> <code>arabus</code> için,</li>
-          <li id="AN-ceriban176"><b>ceriban176</b> <code>roitus</code> için,</li>
+          <li id="AN-ceriban176"><b>ceriban176</b> <code>louivitus</code> ve <code>roitus</code> için,</li>
           <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="GitHub'da @niss0u'ya göz atın">Nissou</a></b> <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/Apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/Apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/Apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/Apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> ve <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code> için,</li>
           <li id="AN-Goku"><b>Goku</b> <code>maya</code> ve <code>zorus</code> için,</li>
           <li id="AN-Abat"><b>Abat</b> <code>paintus</code> için,</li>
