--- a/en/index.html
+++ b/en/index.html
@@ -108,7 +108,7 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">126</b></p>
+        <p align="center">Total number of members: <b class="ref">129</b></p>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align=center>
           <thead>
@@ -554,6 +554,13 @@
               <td><a href="../files/japnessa.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-XNinja">kebabus</a></td>
+              <td>
+                <p><img src="../files/kebabus.jpeg"></p>
+              </td>
+              <td><a href="../files/kebabus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Ilian">killus</a></td>
               <td>
                 <p><img src=../files/killus.jpeg></p>
@@ -580,6 +587,13 @@
                 <p><img src=../files/livrus.jpeg></p>
               </td>
               <td><a href="../files/livrus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-ceriban176">louivitus</a></td>
+              <td>
+                <p><img src="../files/louivitus.jpeg"></p>
+              </td>
+              <td><a href="../files/louivitus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-EVIL-UO">luffus</a></td>
@@ -791,6 +805,13 @@
                 <p><img src="../files/rickus.jpeg"></p>
               </td>
               <td><a href="../files/rickus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Aliko">robloxus</a></td>
+              <td>
+                <p><img src="../files/robloxus.jpeg"></p>
+              </td>
+              <td><a href="../files/robloxus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Ilian">robotus</a></td>
@@ -1047,19 +1068,19 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/Apix0n" target="_blank" title="Check out @Apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" style="text-decoration: underline; text-decoration-color: var(--ref);">rickus</code>, <code>stickmus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>applus</code>, <code>asus</code>, <code>diamonda</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stickmus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/Apix0n/Armus/issues/7 target="_blank">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
           <li id="AN-Camicase"><b>Camicase</b> for <code>helicoptus</code> and <code>sleepus</code>,</li>
-          <li id="AN-Aliko"><b class="ref">👑 Aliko</b> for <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>,</li>
+          <li id="AN-Aliko"><b class="ref2">💎 Aliko</b> for <code>babacus</code>, <code>coca-colus</code>, <code>demonus</code>, <code>dora</code>, <code>eclairus</code>, <code>grogus</code>, <code>hakimus</code>, <code>icecreamus</code>, <code>intellus</code>, <code>japnessa</code>, <code>mbappus</code>, <code>nutellus</code>, <code>peppus</code>, <code>racaillus</code>, <code>robloxus</code>, <code>rockus</code>, <code>tchoupius</code>, <code>tornadus</code>, <code>xdsus</code> and <code>yoyosus</code>,</li>
           <li id="AN-Lili"><b>Lili</b> for <code>amosus</code>, <code>bakacutea</code> and <code>turkus</code>,</li>
           <li id="AN-Petiteprincesse"><b>Petiteprincesse</b> for <code>pikachus</code> and <code>rainbowus</code>,</li>
           <li id="AN-Apyzzelos"><b><a href="https://github.com/Apyzzelos" target="_blank" title="Check out @Apyzzelos on GitHub">Apyzzelos</a></b> for <code>hamburgus</code>,</li>
           <li id="AN-Samilogosy"><b>Samilogosy</b> for <code>capturus</code> and <code>shrekus</code>,</li>
           <li id="AN-K-Y"><b>K.Y</b> for <code>theamosus78</code>,</li>
           <li id="AN-ID-CLAS"><b>ID_CLAS</b> for <code>arabus</code>,</li>
-          <li id="AN-ceriban176"><b>ceriban176</b> for <code>roitus</code>,</li>
+          <li id="AN-ceriban176"><b>ceriban176</b> for <code>louivitus</code> et <code>roitus</code>,</li>
           <li id="AN-Nissou"><b class="ref">👑 <a href="https://github.com/niss0u" target="_blank" title="Check out @niss0u on GitHub">Nissou</a></b> for <code>abatus <a href=https://github.com/Apix0n/Armus/issues/17 target="_blank">#17</a></code>, <code>angelus <a href=https://github.com/Apix0n/Armus/issues/24 target="_blank">#24</a></code>, <code>bitmojus <a href=https://github.com/Apix0n/Armus/issues/28 target="_blank">#28</a></code>, <code>cupidus <a href=https://github.com/Apix0n/Armus/issues/27 target="_blank">#27</a></code>, <code>goblinus <a href=https://github.com/Apix0n/Armus/issues/21 target="_blank">#21</a></code>, <code>invisiblus <a href=https://github.com/Apix0n/Armus/issues/23 target="_blank">#23</a></code>, <code>panterus <a href=https://github.com/Apix0n/Armus/issues/18 target="_blank">#18</a></code>, <code>papillus <a href=https://github.com/Apix0n/Armus/issues/25 target="_blank">#25</a></code>, <code>superherus <a href=https://github.com/Apix0n/Armus/issues/26 target="_blank">#26</a></code>, <code>voitus <a href="https://github.com/Apix0n/Armus/issues/29" target="_blank">#29</a></code> and <code>werbrus <a href=https://github.com/Apix0n/Armus/issues/20 target="_blank">#20</a></code>,</li>
           <li id="AN-Goku"><b>Goku</b> for <code>maya</code> and <code>zorus</code>,</li>
           <li id="AN-Abat"><b>Abat</b> for <code>paintus</code>,</li>
